--- a/blog/templates/blog/blogpost.html
+++ b/blog/templates/blog/blogpost.html
@@ -50,7 +50,7 @@
           <div class="single-blog">
             <!-- Blog Content Start -->
             <div class="blog-content">
-              </h1><a class="read-more" style="font-size: 20px" href="/">{{blog.name}}</a></>
+              </h1><a href="/">{{blog.name}}</a><h1/>
               <p>{{blog.description}}</p>
         
               <a class="read-more" href="/blog/{{blog.slug}}"> Read more →</a>
