--- a/pages/templates/pages/page.html
+++ b/pages/templates/pages/page.html
@@ -1,5 +1,9 @@
 {% extends 'blog/base.html' %}
 {% block title %}{{page.name}}{% endblock title %}
 {% block body %}
+
+<div class="ourpagesdata">
 {{page.content|safe}}
+</div>
+
 {% endblock body %}
