--- a/blog/templates/blog/blogpost.html
+++ b/blog/templates/blog/blogpost.html
@@ -13,52 +13,53 @@
             <p>{{blogp.content|safe}}</p>
 
         </div></br></br></br></br>
-        
+
         <div class="containersss">
             <h2>Leave Us a Comment</h2>
-            <form action="{% url 'postComment' %}" method="post">  
-            {% csrf_token %}
-            <input type="text" name="user" placeholder="Your Name" required>
-            <input type="hidden" name="slug" value="{{blogp.slug}}" required>
-             <textarea name="comment" placeholder='Add Your Comment' required></textarea>
-             <button class="commentbtn">Submit</button>
+            <form action="{% url 'postComment' %}" method="post">
+                {% csrf_token %}
+                <input type="text" name="user" placeholder="Your Name" required>
+                <input type="hidden" name="slug" value="{{blogp.slug}}" required>
+                <textarea name="comment" placeholder='Add Your Comment' required></textarea>
+                <button class="commentbtn">Submit</button>
             </form>
             <br><br>
 
             <div class="all-comments">
                 {% for i in comments %}
-                    <div class="one-comment">
-                        <ul>
-                            <li class="fa fa-user"> &nbsp;&nbsp; {{i.user}}</li>
-                            <li>&nbsp;&nbsp; {{i.date}}</li><br>
-                            <li class="commentmsg">{{i.comment}}</li>
-                        </ul>
-                    </div>
+                <div class="one-comment">
+                    <ul>
+                        <li class="fa fa-user"> &nbsp;&nbsp; {{i.user}}</li>
+                        <li>&nbsp;&nbsp; {{i.date}}</li><br>
+                        <li class="commentmsg">{{i.comment}}</li>
+                    </ul>
+                </div>
                 {% endfor %}
             </div>
-          </div>
-
-          
-
- <hr class="hr-text" data-content="Similar Posts">
-
-
-
-          <div class="simlearpost">
-          {% for blog in featured_posts %}
-
-          <div class="single-blog">
-            <!-- Blog Content Start -->
-            <div class="blog-content">
-              </h1><a href="/">{{blog.name}}</a><h1/>
-              <p>{{blog.description}}</p>
-        
-              <a class="read-more" href="/blog/{{blog.slug}}"> Read more →</a>
-            </div>
-            <!-- Blog Content End -->
         </div>
-        {% endfor %}
-    </div>
+
+
+
+        <hr class="hr-text" data-content="Similar Posts">
+
+
+
+        <div class="simlearpost">
+            {% for blog in featured_posts %}
+
+            <div class="single-blog">
+                <!-- Blog Content Start -->
+                <div class="blog-content">
+                    </h1><a href="/">{{blog.name}}</a>
+                    <h1 />
+                    <p>{{blog.description}}</p>
+
+                    <a class="read-more" href="/blog/{{blog.slug}}"> Read more →</a>
+                </div>
+                <!-- Blog Content End -->
+            </div>
+            {% endfor %}
+        </div>
 
 
 
@@ -80,12 +81,28 @@
             {% endfor %}
         </div>
 
+        <br><br><br>
+        <div class="center video-lists">
+            <div class="icons first">
+               <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+               <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+               <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+               <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+            </div>
+            <div class="icons second">
+               <li><a href="#"><span class="fab fa-whatsapp"></span></a></li>
+               <li><a href="#"><span class="fab fa-telegram-plane"></span></a></li>
+               <li><a href="#"><span class="fab fa-github"></span></a></li>
+               <li><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
+            </div>
+         </div>
+
     </div>
 
-    
 
 
-    
+
+
 
 
 
@@ -98,7 +115,7 @@
 
     <div class="card-category-1">
 
-        
+
         {% for blog in featured_posts %}
         <div class="basic-card basic-card-aqua">
             <div class="card-content">
@@ -115,7 +132,8 @@
         </div>
         {% endfor %}
 
-    
+
+
 
 
 
