--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -54,6 +54,26 @@
 
             {% endif %}
 
+
+            <br><br><br>
+            <div class="center video-lists">
+                <div class="icons first">
+                   <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                   <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+                   <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+                   <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                </div>
+                <div class="icons second">
+                   <li><a href="#"><span class="fab fa-whatsapp"></span></a></li>
+                   <li><a href="#"><span class="fab fa-telegram-plane"></span></a></li>
+                   <li><a href="#"><span class="fab fa-github"></span></a></li>
+                   <li><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
+                </div>
+             </div>
+
+
+
+
         </div>
 
     </div>
