fix some issue in social media icon

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -901,7 +901,7 @@ input {
   margin-top: 15px;
   margin-left: 40px;
 }
-li{
+.social-media-icons{
   position: relative;
   list-style: none;
   height: 70px;
