--- a/blog/templates/blog/blogpost.html
+++ b/blog/templates/blog/blogpost.html
@@ -5,7 +5,7 @@
 
 
 <h3 class="heading">{{blogp.heading}}</h3>
-<div class="container">
+<div class="container blogreadmorepost">
     <div class="main-video">
         <div class="video">
             <h3 class="title">{{blogp.name}}</h3>
