add share blog post and added css in blog share

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -934,7 +934,7 @@ li a{
   color: #b6bbc5;
 }
 li a span{
-  color: #007ae9;
+  color: var(--red);
 }
 .first li.shadow-1{
   box-shadow: inset -3px -3px 7px #ffffff73,
@@ -956,4 +956,16 @@ li a span{
   font-size: 24px;
   box-shadow: inset -3px -3px 7px #ffffff73,
               inset 3px 3px 5px rgba(94,104,121,0.288);
+}
+/* ========================================================================================================================================================================================================================================================================================================================================================================================================= */
+.sharenow a{
+  color: var(--red);
+  font-size: 50px;
+  margin-left: 30px;
+}
+.sharenow{
+  display: flex;
+  color: #444444;
+  font-size: 30px;
+  margin-left: 650px;
 }
