--- a/blog/templates/blog/blogpost.html
+++ b/blog/templates/blog/blogpost.html
@@ -14,6 +14,17 @@
 
         </div></br></br></br></br>
 
+
+        <div class="sharenow">
+            <a href="https://web.whatsapp.com/send?text={{blogp.heading}}%20|%20https://8store.in/blog/{{blogp.slug}}"><i class="fab fa-whatsapp-square"></i></a>
+
+            <a href="https://www.facebook.com/sharer.php?u=https://8store.in/blog/{{blogp.slug}}"><i class="fab fa-facebook-square"></i></a>
+
+            <a href="https://twitter.com/share?url=https://8store.in/blog/{{blogp.slug}}"><i class="fab fa-twitter-square"></i></a>
+      
+        </div>
+        
+
         <div class="containersss">
             <h2>Leave Us a Comment</h2>
             <form action="{% url 'postComment' %}" method="post">
