--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
-    <link rel="stylesheet" href="../../static/blog/style.css">
+    <link rel="stylesheet" href="{% static 'blog/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     {% block head %}{% endblock head %}
 </head>
