change in base.html file

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -47,11 +47,11 @@
 <div class="topmargin"></div>
 
 
-<nav class="navbar2">
+{% comment %} <nav class="navbar2">
     {% for blog in featured_category %}
     <a href="/blog/category/{{blog.name}}">{{blog.name}}</a>
     {% endfor %}
-</nav>
+</nav> {% endcomment %}
 
 <!--=================================================================================================================================== header section starts ===================================================================================================================================  -->
 
