--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -55,7 +55,7 @@
             {% endif %}
 
 
-            <br><br><br><br>
+            {% comment %} <br><br><br><br>
         <div class="center video-lists">
             <div class="icons first">
                <li class="social-media-icons"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
@@ -69,7 +69,7 @@
                <li class="social-media-icons"><a href="#"><span class="fab fa-github"></span></a></li>
                <li class="social-media-icons"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
             </div>
-         </div>
+         </div> {% endcomment %}
 
 
 
