--- a/blog/templates/blog/blogpost.html
+++ b/blog/templates/blog/blogpost.html
@@ -16,11 +16,11 @@
 
 
         <div class="sharenow">
-            <a href="https://web.whatsapp.com/send?text={{blogp.heading}}%20|%20https://8store.in/blog/{{blogp.slug}}"><i class="fab fa-whatsapp-square"></i></a>
+            <a href="https://web.whatsapp.com/send?text={{blogp.heading}}%20|%20https://blog.nitinsingh.online/blog/{{blogp.slug}}"><i class="fab fa-whatsapp-square"></i></a>
 
-            <a href="https://www.facebook.com/sharer.php?u=https://8store.in/blog/{{blogp.slug}}"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.facebook.com/sharer.php?u=https://blog.nitinsingh.online/blog/{{blogp.slug}}"><i class="fab fa-facebook-square"></i></a>
 
-            <a href="https://twitter.com/share?url=https://8store.in/blog/{{blogp.slug}}"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://twitter.com/share?url=https://blog.nitinsingh.online/blog/{{blogp.slug}}"><i class="fab fa-twitter-square"></i></a>
       
         </div>
         
@@ -82,34 +82,6 @@
     </div>
 
 
-    <div class="video-lists">
-
-        <div class="video-list">
-            <h1 class="Category">Category</h1>
-            {% for blog in categoryp %}
-            <div class="vid active">
-                <h3 class="title"><a href="/blog/category/{{blog.name}}">{{blog.name}}</a></h3>
-            </div>
-            {% endfor %}
-        </div>
-
-        <br><br><br>
-        <div class="center video-lists">
-            <div class="icons first">
-               <li class="social-media-icons"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-               <li class="social-media-icons"><a href="#"><span class="fab fa-twitter"></span></a></li>
-               <li class="social-media-icons"><a href="#"><span class="fab fa-instagram"></span></a></li>
-               <li class="social-media-icons"><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
-            </div>
-            <div class="icons second">
-               <li class="social-media-icons"><a href="#"><span class="fab fa-whatsapp"></span></a></li>
-               <li class="social-media-icons"><a href="#"><span class="fab fa-telegram-plane"></span></a></li>
-               <li class="social-media-icons"><a href="#"><span class="fab fa-github"></span></a></li>
-               <li class="social-media-icons"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
-            </div>
-         </div>
-
-    </div>
 
 
 
