--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -633,11 +633,26 @@ header .icons #menu-bars {
   padding-left: 35px;
 }
 
+
+.blogreadmorepost {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.blogreadmorepost .main-video .video{
+  margin: 5px;
+  padding: 2px;
+  align-items: center;
+  text-align: justify;
+}
+
+
+
 .container .main-video {
   background: #fff;
   border-radius: 5px;
   padding: 10px;
-  width: 910px;
+  width: 100%;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   
 }
@@ -690,12 +705,19 @@ header .icons #menu-bars {
   .container {
     grid-template-columns: 1fr;
   }
+  
+
+  
 }
 
 @media (max-width: 768px) {
   .container {
     grid-template-columns: 1fr;
   }
+  
+
+
+
 }
 
 .containersss {
