--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -218,12 +218,10 @@ header .icons #menu-bars {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
   }
-  .navbar2{
-    display: none;
-  }
+  
   .blogreadmorepost{
-    max-width: 300px;
-    min-width: 100px;
+    max-width: auto;
+    min-width: auto;
   }
 }
 
@@ -239,8 +237,8 @@ header .icons #menu-bars {
     width: 100%;
   }
   .blogreadmorepost{
-    max-width: 300px;
-    min-width: 100px;
+    max-width: auto;
+    min-width: auto;
   }
 }
 
@@ -640,12 +638,23 @@ header .icons #menu-bars {
 }
 
 .blogreadmorepost .main-video .video{
-  margin: 5px;
-  padding: 2px;
-  align-items: center;
-  text-align: justify;
+   text-align: center;
 }
 
+.blogreadmorepost .main-video .video img{
+  width: 90%;
+  height: 50%;
+}
+
+.blog-description{
+  color: #444;
+  font-family: sans-serif;
+  letter-spacing: 0.06rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.9rem;
+  text-align: justify;
+  padding: 10px;
+}
 
 
 .container .main-video {
